alignment fixed

--- a/product.css
+++ b/product.css
@@ -118,7 +118,7 @@ button>img{
     height:41px;
     background-color:gray;
     position: relative;
-    top: 5px;
+    top: 7px;
     right: 5px
 
 }
